[gd_scene load_steps=4 format=3 uid="uid://ckh3rdrsh87s7"]

[ext_resource type="Script" path="res://weapons/weapon.gd" id="1_2obk6"]
[ext_resource type="Script" path="res://components/spawner_component.gd" id="1_he18o"]
[ext_resource type="Script" path="res://components/scale_component.gd" id="2_y5e0e"]

[node name="Weapon" type="Node2D"]
script = ExtResource("1_2obk6")

[node name="WeaponSprite" type="Sprite2D" parent="."]

[node name="Muzzle" type="Marker2D" parent="."]

[node name="ProjectileSpawner" type="Node2D" parent="."]
script = ExtResource("1_he18o")

[node name="ScaleComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("2_y5e0e")
sprite = NodePath("../WeaponSprite")

[node name="FireRateTimer" type="Timer" parent="."]
one_shot = true

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="FireRateTimer" to="." method="fire_projectile"]
